--- a/Program/.classpath
+++ b/Program/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="1_Erronka"/>
 	<classpathentry kind="src" path="3_Erronka"/>
+	<classpathentry kind="src" path="2_Erronka"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
